--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6 mb-4">
-                    <p class="input-label mb-2">BILL AMOUNT</p>
+                    <p class="input-label mb-2" placeholder = "enter amount ">BILL AMOUNT</p>
                     <input type="text" class="user-input" id="billAmount" />
                 </div>
                 <div class="col-12 col-md-6 mb-4">
-                    <p class="input-label mb-2">PERCENTAGE TIP</p>
+                    <p class="input-label mb-2" placeholder = "enter number ">PERCENTAGE TIP</p>
                     <input type="text" class="user-input" id="percentageTip" />
                 </div>
                 <div class="col-12 col-md-6 mb-4">
